<resources>
    <string name="is_need_ad">open</string>
    <string name="packagename">com.hwtx.dududh</string>
    <string name="product">嘟嘟</string>
    <string name="brandid">dudu</string>
    <string name="url_share">http://route.edawtech.com/share</string>
    <string name="uri_prefix">http://paas.edawtech.com</string>
    <string-array name="url_prots">
        
        <item>http://paas.edawtech.com</item>
        
        
    </string-array>
    <string-array name="addr_urls">
        <item></item>
    </string-array>
    <string name="vs_calllog_title_dial_del_all">清除</string>
    <string name="vs_dial_clog_all">全部通话</string>
    <string name="vs_dial_clog_miss">未接来电</string>
    <string name="vs_dial_clog_edit">编辑</string>
    <string name="vs_contacts_all">联系人</string>
    <string name="vs_msm_all">信息</string>
    <string name="vs_dial_clog_add">添加</string>
    <string name="vs_code_hint">请输入验证码</string>
    <string name="vs_phone_hint">请输入手机号</string>
    <string name="vs_phone_hint_and_account">请输入手机号/帐号</string>
    <string name="vs_password_sr_hint">请输入密码</string>
    <string name="vs_password_hint">请设置密码</string>
    <string name="vs_verify_hint">请输入验证码</string>
    <string name="vs_next_hint">下一步</string>
    <string name="vs_finish_hint">完成</string>
    <string name="vs_cannel">取消</string>
    <string name="vs_ok">确定</string>
    <string name="vs_phone_erro">请输入正确的手机号！</string>
    <string name="vs_phone_erro_isnull">手机号/帐号不能为空！</string>
    <string name="vs_phone_toast_isnull">手机号不能为空！</string>
    <string name="vs_code_erro">验证码错误！</string>
    <string name="vs_pwd_erro">请输入正确的密码！</string>
    <string name="vs_exit">退出</string>
    <string name="vs_gain_money">赚话费</string>
    <string name="callphone_monery_title">余额不足</string>
    <string name="callphone_monery_msg">你的账户没有话费，建议赚话费后拨打</string>
    <string name="vs_pwd_isnull_str">密码不能为空！</string>
    <string name="vs_code_isnull_str">验证码不能为空！</string>
    <string name="vs_pwd_xy6_str">密码长度小于6位！</string>
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <string name="vs_unlocked_pwd_str">手势密码</string>
    <string name="product_name">嘟嘟通讯专线</string>
    <string name="register_info">系统将把账号、密码以短信方式发送到该手机上，请妥善保管。</string>
    <string name="register_fail_info">注册失败，请稍后再试！</string>
    <string name="register_fail_code">获取验证码失败，请稍后再试！</string>
    <string name="register_successsumbitmsg">注册成功.</string>
    <string name="setpass_successsumbitmsg">重置密码成功.</string>
    <string name="register_successcode">系统已把验证码发到您的手机,请稍后留意您的短信.</string>
    <string name="vs_reg_dialog_title">温馨提示</string>
    <string name="vs_reg_dialog_msg">该手机已注册过，老朋友去登录吧</string>
    <string name="vs_reg_dialog_msg2">注册尚未完成，确定退出？</string>
    <string name="vs_reg_dialog_goon">继续注册</string>
    <string name="vs_start_register_str">注册</string>
    <string name="vs_start_login_str">登录</string>
    <string name="vs_start_register_str2">立即领取</string>
    <string name="vs_start_hint1">注册领取</string>
    <string name="vs_start_hint2">40分钟话费</string>
    <string name="vs_start_hint3">\n及无限WIFI通话大礼包</string>
    <string name="vs_reghist_hint">手机号码仅用于接收帐号密码，绝不会向他人公开</string>
    <string name="vs_reghist_title_hint">注册</string>
    <string name="vs_reghist_title_hint1">注册 （2/3）</string>
    <string name="vs_reghist_title_hint2">注册 （3/3）</string>
    <string name="vs_reghist_server_hint">注册即视为同意</string>
    <string name="vs_reghist_server_tv">《电子协议》</string>
    <string name="vs_phone_hint_invide">请输入邀请码</string>
    <string name="vs_msg_verify_agin_hint">再次获取</string>
    <string name="vs_msg_verify_hint1">嘟嘟通讯电话已下发验证短信到手机</string>
    <string name="vs_msg_verify_hint2">请注意查收</string>
    <string name="vs_msg_verify_str">短信接收验证码</string>
    <string name="vs_voice_verify_str">电话接听验证码</string>
    <string name="vs_msg_verify_voice_hint1">嘟嘟通讯电话正在呼叫</string>
    <string name="vs_msg_verify_voice_hint2">，请接听来电，将听到的验证码填入输入框</string>
    <string name="vs_msg_verify_hint_sms">短信验证码发送成功！</string>
    <string name="vs_msg_verify_hint_voice">请电话接听验证码！</string>
    <string name="vs_set_password_hint">设置一个6到16位的密码，密码前后不能有空格</string>
    <string name="vs_set_password_show_hint">显示密码</string>
    <string name="vs_set_register_show_hint">免费注册</string>
    <string name="vs_set_phone_title_hint1">重置密码</string>
    <string name="vs_set_phone_title_hint2">重置密码（2/3）</string>
    <string name="vs_set_phone_title_hint3">重置密码（3/3）</string>
    <string name="vs_set_phone_hint">确认你的手机号，接收短信验证码</string>
    <string name="vs_pwd_dialog_msg2">重置密码尚未完成，确定退出？</string>
    <string name="vs_pwd_dialog_goon">继续</string>
    <string name="vs_login_btn_hint">登录</string>
    <string name="vs_login_reset_password_hint">忘记密码</string>
    <string name="vs_calllog_inlog">导入通话记录</string>
    <string name="vs_calllog_title_dial">最近通话</string>
    <string name="vs_calltype_hint">拨打设置</string>
    <string name="vs_calltype_close_hint">已关闭</string>
    <string name="vs_thirdcalltype_hint">请输入第三方信息</string>
    <string name="vs_calltype_open_hint">已开启</string>
    <string name="vs_calltype_callback_hint">了解回拨</string>
    <string name="vs_calltype_hint_title">关于回拨</string>
    <string name="vs_calltype_hint1">回拨呼叫时需要接听系统来电，如果您的手机接听不免费或漫游，运营商会收取接听费用</string>
    <string name="vs_calltype_hint2">1、不消耗手机流量（仅在通知嘟嘟通讯电话服务器时消耗2KB流量）\n2、通话稳定，音质好\n3、回拨是你呼叫对方后，嘟嘟通讯电话系统会收到你的呼叫，然后通过电话线路再呼叫你，当你接通后，嘟嘟通讯电话系统会通过电话线路为你呼叫对方。所以，回拨走的是电话线路，不是网络，所以不消耗手机流量，且通话稳定，音质好。</string>
    <string name="vs_calltype_hint3">1.通话质量好\n2.一通电话仅需要2KB流量\n3.回拨呼叫时需要接听系统来电\n4.如果您的手机接听不免费或漫游，使用回拨时，运营商会收取接听费用</string>
    <string name="vs_calltype_hint4">什么是回拨?</string>
    <string name="vs_contact_vmark_hint">嘟嘟通讯好友互打永久免费</string>
    <string name="vs_contact_add_righttext">添加</string>
    <string name="vs_contact_nulltext">没有找到联系人</string>
    <string name="vs_contact_no_authorytext1">请在系统设置中开启联系人权限</string>
    <string name="vs_contact_no_authorytext2">（设置-应用-嘟嘟通讯电话-权限管理-联系人记录-允许）</string>
    <string name="vs_contact_friend_nulltext1">你还没有嘟嘟通讯好友</string>
    <string name="vs_contact_friend_nulltext2">邀请好友加入嘟嘟通讯电话，互打、发信息永久免费,还能获得话费奖励哦！</string>
    <string name="vs_contact_footer_num">共有%d位联系人</string>
    <string name="vs_contact_loading">正在加载联系人...</string>
    <string name="vs_callphone_chioce_hint">不再提醒</string>
    <string name="vs_callphone_hint_str">隐藏</string>
    <string name="vs_callphone_sq_call">嘟嘟通讯电话</string>
    <string name="vs_callphone_notOnline">对方不在线，建议改用嘟嘟通讯电话</string>
    <string name="callphone_callend">挂断</string>
    <string name="callphone_re">接听</string>
    <string name="callphone_not_wifi_hint">你现在不在wifi网络下，会消耗本机流量</string>
    <string name="callphone_not_wifi_btn1">建议嘟嘟通讯电话呼叫</string>
    <string name="callphone_not_wifi_btn2">继续呼叫</string>
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    <string name="vs_code_find">二维码扫描</string>
    <string name="vs_qrcode_title">嘟嘟通讯电话二维码</string>
    <string name="vs_qrcode_hint1">邀好友扫码\u0020\u0020</string>
    <string name="vs_qrcode_hint2">每邀请一人可获得10个嘟嘟通讯元宝还能和TA永久免费互打噢</string>
    <string name="vs_qrcode_hint3">对方可以用微信、QQ或其它二维码扫码器扫码</string>
    <string name="vs_callback_hint01">系统正在回拨到</string>
    <string name="vs_callback_hint02">\n注意接听</string>
    <string name="first_dial_prompt">网络呼叫不会扣除手机话费，回拨需要接听系统来电（可能是未知号码）</string>
    <string name="vs_callback_tip01">已经为您回拨，请准备接听</string>
    <string name="vs_callback_tip02">(您可能会接到一个未知来电，请放心接听)</string>
    <string name="vs_callback_return_wait">返回等待</string>
    <string name="vs_contact_detail_title">联系人详情</string>
    <string name="vs_contact_detail_edit_contacts">编辑</string>
    <string name="vs_sendphonecard_cancelsendphonecard">取消</string>
    <string name="vs_contact_detail_sendphonecard">传名片</string>
    <string name="vs_sendfriendcard_str_hint">选择发送好友名片方式</string>
    <string name="vs_sendfriendcard_str_msg">短信</string>
    <string name="vs_sendfriendcard_str_wx">微信</string>
    <string name="vs_sendfriendcard_str_qq">QQ</string>
    <string name="vs_calllog_detail_title">通话详情</string>
    <string name="vs_calllog_createcontact">创建新联系人</string>
    <string name="vs_calllog_addtocontact">添加到现有联系人</string>
    <string name="vs_myselft_account">嘟嘟通讯号：</string>
    <string name="vs_myinfo_text_title">个人信息</string>
    <string name="vs_myaccount_detail">我的余额</string>
    <string name="vs_myredpag_detail">我的成长金</string>
    <string name="vs_myexchange_detail">充值卡列表</string>
    <string name="vs_mypackage_detail">我的套餐</string>
    <string name="vs_mycheck_detail">话单查询</string>
    <string name="vs_myinfotext_name">设置昵称</string>
    <string name="vs_myinfotext_phone">手机号码</string>
    <string name="vs_myinfotext_sex">设置性别</string>
    <string name="vs_myinfotext_bir">设置生日</string>
    <string name="vs_myinfotext_area">设置地区</string>
    <string name="vs_myinfotext_mailbox">设置邮箱</string>
    <string name="dialog_invit">邀请TA</string>
    <string name="dialog_msg">对方还不是你的嘟嘟通讯好友，邀请TA使用嘟嘟通讯电话一起打免费电话，你也可以用嘟嘟通讯电话拨打</string>
    <string name="vs_recharge_title">话费</string>
    <string name="vs_balance_combo_Tariff">资费查询</string>
    <string name="vs_recharge_th_tv">特惠</string>
    <string name="vs_recharge_go_tv">去充值</string>
    <string name="vs_recharge_charge">立即充值</string>
    <string name="vs_setiong_phone_change_str">改绑手机</string>
    <string name="vs_seting_call">拨打方式</string>
    <string name="vs_invite_str_hint">邀请好友成为嘟嘟通讯好友，互打永久免费</string>
    <string name="vs_invite_str_msg">短信邀请</string>
    <string name="vs_invite_str_wx">微信邀请</string>
    <string name="vs_invite_str_qq">QQ邀请</string>
    <string name="vs_invite_str_wxq">朋友圈邀请</string>
    <string name="a_to_z_JH">#</string>
    <string name="a_to_z_A">A</string>
    <string name="a_to_z_B">B</string>
    <string name="a_to_z_C">C</string>
    <string name="a_to_z_D">D</string>
    <string name="a_to_z_E">E</string>
    <string name="a_to_z_F">F</string>
    <string name="a_to_z_G">G</string>
    <string name="a_to_z_H">H</string>
    <string name="a_to_z_I">I</string>
    <string name="a_to_z_J">J</string>
    <string name="a_to_z_K">K</string>
    <string name="a_to_z_L">L</string>
    <string name="a_to_z_M">M</string>
    <string name="a_to_z_N">N</string>
    <string name="a_to_z_O">O</string>
    <string name="a_to_z_P">P</string>
    <string name="a_to_z_Q">Q</string>
    <string name="a_to_z_R">R</string>
    <string name="a_to_z_S">S</string>
    <string name="a_to_z_T">T</string>
    <string name="a_to_z_U">U</string>
    <string name="a_to_z_V">V</string>
    <string name="a_to_z_W">W</string>
    <string name="a_to_z_X">X</string>
    <string name="a_to_z_Y">Y</string>
    <string name="a_to_z_Z">Z</string>
    <string name="not_dudu_rider">您当前的手机号暂未开通嘟嘟骑手</string>
    <string name="sign_up">报名开通</string>
    <string name="refresh">刷新</string>
</resources>